tests/baselines/reference/parserComputedPropertyName19(strict=true).errors.txt
parserComputedPropertyName19.ts(1,10): error TS1170: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
parserComputedPropertyName19.ts(1,10): error TS7008: Member '[e]' implicitly has an 'any' type.
parserComputedPropertyName19.ts(1,11): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName19.ts (3 errors) ====
    var v: { [e]? };
             ~~~
!!! error TS1170: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
             ~~~
!!! error TS7008: Member '[e]' implicitly has an 'any' type.
              ~
!!! error TS2304: Cannot find name 'e'.